--- a/interactive_fiction/final/index.html
+++ b/interactive_fiction/final/index.html
@@ -28,7 +28,7 @@
         <p><a href='#slide3'>WAIT</a> for your great grandpa, who is a computer expert, to come home</p>
         <div class="event-text"></div>
      </div>
-     <div class="menu item-container"><div class="inventory-box"><img src="pirate-Sword-psd81615.png" alt="pirate-Sword-psd81615" class="item" id="pirate-Sword-psd81615"></div></div>
+     <div class="menu item-container"><div class="inventory-box"><img src="bat.png" alt="bat" class="item" id="bat"></div></div>
     </div>
     <div id="slide2" class="step slide" data-x="1500">
       <div class="slide-text">
