--- a/interactive_fiction/final/index.html
+++ b/interactive_fiction/final/index.html
@@ -32,7 +32,7 @@
     </div>
     <div id="slide2" class="step slide" data-x="1500">
       <div class="slide-text">
-        <p>Woah.  A dinosaur.  I wonder if you can hit it with something...</p>
+        <p>Woah. A parrot on top of one of the world's oldest computers the Z2 by Konrad Zuse.  I wonder if you can stab it with something...</p>
         <div class="event-text"></div>
       </div>
       <div class="menu"><div class="inventory-box"><img src="parrot_PNG722.png" alt="dino" class="item" id="dino"></div></div>
